plugins {
    id 'com.android.application'
    id 'kotlin-android'
}

android {
    compileSdk 31

    defaultConfig {
        applicationId "com.veze.pokemonpaging"
        minSdk 21
        targetSdk 31
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        debug {
            testCoverageEnabled true
        }
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    kotlinOptions {
        jvmTarget = '1.8'
    }
    buildFeatures {
        viewBinding true
    }

    testOptions {
        unitTests.all {
            useJUnitPlatform()
        }
    }
}

//Dependencies versions
ext.versions = [:]
versions.rxJava = '3.0.0'
versions.retrofit = '2.9.0'
versions.lifecycle = '2.3.1'
versions.glide = '4.12.0'
versions.gson = '2.8.8'

tasks.withType(Test) {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
}

dependencies {
    //Core
    implementation 'androidx.core:core-ktx:1.6.0'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.40"

    //Lifecycle
    implementation 'android.arch.lifecycle:extensions:1.1.1'
    implementation 'androidx.fragment:fragment-ktx:1.3.6'
    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycle"
    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$versions.lifecycle"

    //retrofit
    api("com.squareup.retrofit2:retrofit:$versions.retrofit")
    api("com.squareup.retrofit2:converter-gson:$versions.retrofit")
    implementation "com.squareup.retrofit2:adapter-rxjava3:$versions.retrofit"

    //JSON
    implementation "com.google.code.gson:gson:$versions.gson"

    //Rx
    implementation "io.reactivex.rxjava3:rxandroid:$versions.rxJava"
    implementation "io.reactivex.rxjava3:rxkotlin:$versions.rxJava"
    implementation "io.reactivex.rxjava3:rxjava:$versions.rxJava"

    //Glide
    implementation "com.github.bumptech.glide:glide:$versions.glide"
    annotationProcessor "com.github.bumptech.glide:compiler:$versions.glide"


    //UI
    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
    implementation 'androidx.appcompat:appcompat:1.3.1'
    implementation 'com.google.android.material:material:1.4.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
    implementation "androidx.recyclerview:recyclerview:1.2.1"

    // (Required) Writing and executing Unit Tests on the JUnit Platform
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

    testImplementation "com.squareup.okhttp3:mockwebserver:4.6.0"

    testImplementation 'io.mockk:mockk:1.12.0'
    testImplementation "io.mockk:mockk-agent-jvm:1.12.0"

    testImplementation "com.squareup.retrofit2:retrofit-mock:$versions.retrofit"
}